@@ -15,6 +15,9 @@ Revision history for libev, a high-performance and full-featured event loop.
         - work around a bug in realloc on openbsd and darwin,
           also makes the errornous valgrind complaints
           go away (noted by various people).
+        - fix ev_async_pending, add c++ wrapper for ev_async
+          (based on patch sent by Johannes Deisenhofer.
+        - add sensible set method to ev::embed.
 
 3.2  Wed Apr  2 17:11:19 CEST 2008
 	- fix a 64 bit overflow issue in the select backend,
